tests/fail/ip.stderr
error: invalid IP address syntax
 --> tests/fail/ip.rs:4:17
  |
4 |     let _ = ip!("192.168.11");
  |                 ^^^^^^^^^^^^

error: invalid IP address syntax
 --> tests/fail/ip.rs:5:17
  |
5 |     let _ = ip!("2001:db8::32::23");
  |                 ^^^^^^^^^^^^^^^^^^
